// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders medium and up when medium size defined 1`] = `
<div
  className="gQORgB"
>
  <div
    className="ffEooq"
  >
    <div
      className="LoSSx"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Grid renders multiple sizes defined 1`] = `
<div
  className="gQORgB"
>
  <div
    className="ffEooq"
  >
    <div
      className="emwvir"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Grid renders small size defined 1`] = `
<div
  className="gQORgB"
>
  <div
    className="ffEooq"
  >
    <div
      className="kSaLhE"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Grid renders with defaults 1`] = `
<div
  className="gQORgB"
>
  <div
    className="ffEooq"
  >
    <div
      className="jfUZbX"
    >
      Content
    </div>
  </div>
</div>
`;
